z-index fix for yui-panels [APPBUG-837] [APPDEV-2224]
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@17753 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/quickbuy.css
+++ b/projects/Media/docroot/assets/css/quickbuy.css
@@ -88,6 +88,9 @@
 	border:transparent;
 	-webkit-box-shadow:4px 4px 10px #999999;
 	-moz-box-shadow:4px 4px 10px #999999;
+}
+
+.yui-panel-container {
 	z-index:100 !important;
 }
 
